After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790941 - rfkill: Fix property notification warning for rfkill-input-inhibited
rfkill: Fix property notification warning for rfkill-input-inhibited
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: rfkill
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
: 791707 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-11-28 13:37 UTC by Benjamin Berg
Modified: 2018-01-10 13:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rfkill: Fix property notification warning for rfkill-input-inhibited (1.08 KB, patch)
2017-11-28 13:37 UTC, Benjamin Berg
committed Details | Review
rfkill: Fix property notification warning for rfkill-input-inhibited (1.08 KB, patch)
2018-01-04 17:54 UTC, Benjamin Berg
committed Details | Review

Description Benjamin Berg 2017-11-28 13:37:55 UTC
Just a trivial fix for a warning.
Comment 1 Benjamin Berg 2017-11-28 13:37:59 UTC
Created attachment 364563 [details] [review]
rfkill: Fix property notification warning for rfkill-input-inhibited

The property change notification was trying to send a notification for
"kernel-noinput" which was the original name proposed for commit 3810072d2b
(rfkill: Add property to Rfkill helper to inhibit kernel handling).

There is no listener for the event, so this simply fixes a warning.
Comment 2 Rui Matos 2017-11-28 15:37:59 UTC
Review of attachment 364563 [details] [review]:

++
Comment 3 Benjamin Berg 2018-01-04 17:54:29 UTC
The following fix has been pushed:
63029f3 rfkill: Fix property notification warning for rfkill-input-inhibited
Comment 4 Benjamin Berg 2018-01-04 17:54:38 UTC
Created attachment 366326 [details] [review]
rfkill: Fix property notification warning for rfkill-input-inhibited

The property change notification was trying to send a notification for
"kernel-noinput" which was the original name proposed for commit 3810072d2b
(rfkill: Add property to Rfkill helper to inhibit kernel handling).

There is no listener for the event, so this simply fixes a warning.
Comment 5 Bastien Nocera 2018-01-10 13:56:56 UTC
*** Bug 791707 has been marked as a duplicate of this bug. ***