rfkill: Fix property notification warning for rfkill-input-inhibited

The property change notification was trying to send a notification for
"kernel-noinput" which was the original name proposed for commit 3810072d2b
(rfkill: Add property to Rfkill helper to inhibit kernel handling).

There is no listener for the event, so this simply fixes a warning.

https://bugzilla.gnome.org/show_bug.cgi?id=790941